syntax = "proto3";
package {{ .Package }};

import "google/api/annotations.proto";

// The greeting service definition.
service {{ .Service }} {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {
        {{ if .EnableHttp }}
        option (google.api.http) = {
            get: "/api/{{.ServiceLower}}/hello"
        };
        {{ end }}
    }
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;

    enum Names {
        world = 0;
        you = 1;
        again = 2;
    }
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}